css/style.css
@charset "utf-8";

* {
  box-sizing: border-box;

  /* Disable text selection */
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;

  /* Disable anchor element popout */
  -webkit-touch-callout: none;
  -moz-touch-callout: none;
  -ms-touch-callout: none;
  touch-callout: none;

  /* Disable dragging of elements */
  -webkit-user-drag: none;
  -moz-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
}

html {
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

body {
  background-color: #666;

  margin: 0;

  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;

  display: flex;
  align-items: center;
  flex-direction: column;
}

input {
  -webkit-user-select: auto !important;
  -khtml-user-select: auto !important;
  -moz-user-select: auto !important;
  -ms-user-select: auto !important;
  user-select: auto !important;
}

.ui-controls {
  display: flex;
  align-self: stretch;

  color: #fff;
  background-color: #444;

  font-size: 1.25rem;
}

.ios-status-bar {
  padding-top: 20px;
}

.ui-controls div {
  margin: 0.5rem;
}

.ui-score {
  display: flex;
  flex: 1;
}

.twemoji {
  height: 1em;
  width: 1em;
  vertical-align: -0.15em;
}

.ui-buttons {
  display: flex;
}

.canvas-container {
  flex: 1;

  display: flex;
  flex-direction: column;
  justify-content: center;
}

.assets {
  display: none;
}

